...
    <string name="tx_from_time">From 00:00</string>
    <string name="tx_to_time">To 23:59</string>
    <string name="tx_rule_validation">Rule validation:</string>
    <string name="ac_edit_calendar_rule">Edit a calendar rule</string>
    <string name="ac_edit_filter_rule">Edit a filter rule</string>
    <string name="ac_edit_filter_patterns">Edit filter patterns</string>
    <string name="ac_pick_action">Pick an action</string>
    <string name="ac_edit_filter">Edit a filter</string>
    <string name="tx_calendar_rule_name">Calendar name:</string>
    <string name="tx_calendar_rule_format">Format:</string>
    <string name="tx_call_received_default">0</string>
    <string name="tx_call_triggered_default">0</string>
    <string name="tx_filter_rule_name">Filter rule name:</string>
...
    <string name="tx_validation_filter_name_empty">Filter name can not be empty.\nNo saving allowed</string>
    <string name="tx_validation_rule_name_used">Rule name already used.\nNo saving allowed</string>
    <string name="tx_validation_filter_name_used">Filter name already used.\nNo saving allowed</string>
    <string name="tx_validation_rule_valid">The rule is valid.\nSaving allowed</string>
    <string name="tx_validation_filter_valid">The filter is valid.\nSaving allowed</string>
    <string name="tx_rule_delete_confirm">Doy you want to delete this rule?</string>
    <string name="tx_filter_delete_confirm">Doy you want to delete this filter?</string>
    <string name="bt_yes_delete">Yes, delete</string>
    <string name="bt_no_keep">No, keep</string>
    <string name="mn_undo_rule">Undo a change</string>
    <string name="tx_validation_rule_no_changes">No changes yet.\nSaving not allowed</string>
    <string name="tx_validation_rule_has_changed">Rule has changed.\nSaving or undo changes is allowed</string>
    <string name="mn_help">Help</string>
    <string name="tx_calendar_rule_help_title">Help on editing calendar rules</string>
    <string name="tx_filter_rule_help_title">Help on editing filter rules</string>
    <string name="tx_filter_help_title">Help on editing filters</string>
...
    <string name="mn_pick_log">Pick from log</string>
    <string name="mn_edit_pattern">Edit a single pattern</string>
    <string name="tx_manage_patterns_help">Manage filter patterns</string>
    <string name="tx_calendar_rule_title">Calendar Rule</string>
    <string name="tx_filter_rule_title">Filter Rule</string>
    <string name="tx_action_name_title">Action</string>
    <string name="mn_pick_calendar">Pick a calendar rule</string>
    <string name="mn_pick_patterns">Pick a filter rule</string>
    <string name="mn_pick_action">Pick an action</string>
    <string name="mn_edit_calendar">Edit the calendar rule</string>
    <string name="mn_edit_patterns">Edit the filter rule</string>
    <string name="tx_action_class">Action class:</string>
    <string name="msg_can_not_delete_rule">Can\'t delete because rule name is in use in a filter</string>
    <string name="about_title">Prisma Call Blocker by ConteDiMonteCristo</string>
    <string name="about_email">Contact: prismoid01@gmail.com</string>
    <string name="about_version">Version: X.X</string>
    <string name="about_description">Rule based call blocker application</string>
...
