<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/scrollView"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/tx_filter_name"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:gravity="center_vertical"
            android:focusable="true"
            android:layout_weight="0.3"
            android:focusableInTouchMode="true"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/edit_filter_name"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="0.7"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded_corner_yellow">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tx_calendar_rule_title"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:gravity="center_horizontal"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tx_calendar_rule_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id ="@+id/text_calendar_name"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded_corner_yellow">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tx_filter_rule_title"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:gravity="center_horizontal"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tx_filter_rule_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id ="@+id/text_filter_rule_name"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded_corner_yellow">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tx_action_name_title"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:gravity="center_horizontal"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tx_action_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id ="@+id/text_action_name"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"/>
    </LinearLayout>

    <TextView
        android:id ="@+id/tx_filter_rule_validation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:background="@drawable/rounded_corner_purple"
        android:text="@string/tx_rule_validation"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

</LinearLayout>
</ScrollView>