...
            android:layout_weight="0.3"
            android:focusableInTouchMode="true"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/edit_filter_rule_name"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="0.7"
            android:inputType="text" />
    </LinearLayout>

...
            android:gravity="center_vertical"
            android:layout_weight="0.3"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/edit_filter_rule_description"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="0.7"
            android:inputType="text" />
    </LinearLayout>
    <LinearLayout
...
